--- a/src/App.css
+++ b/src/App.css
@@ -34,4 +34,14 @@ input[type="text"]{
     background-color: #10111600;
     border: 0px;
     color: #ffffff;
+    text-align: right;
+    font-size: 25px;
+    font-weight: 500;
+    letter-spacing: 1px;
+
+}
+#clear{
+    grid-column: 1/3;
+    grid-row: 1;
+    color: #262834;
 }
