--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,30 @@ input[type="text"]{
     grid-row: 1;
     color: #262834;
 }
+
+#result{
+    grid-column: 3/5;
+    grid-row: 5;
+    color: #262834;
+}
+#backspace{
+    color: #ffffff;
+}
+button{
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: #262834;
+    color: #ffffff;
+    font-weight: 500;
+}
+input:focus,
+input:active,
+button:focus,
+button:active{
+    outline: none;
+}
+.highlight{
+    background: #c99f06;
+}
