--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,13 @@ input[type="text"]{
 #clear{
     grid-column: 1/3;
     grid-row: 1;
-    color: #262834;
+    color: #ffffff;
 }
 
 #result{
     grid-column: 3/5;
     grid-row: 5;
-    color: #262834;
+    color: #ffffff;
 }
 #backspace{
     color: #ffffff;
